Fix site header on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -26,7 +26,6 @@ h1, h2, h3 {
 }
 
 div.site-header {
-width: 50%;
 padding: 0;
 }
 
